# inteligencia-animal

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-frontend.yml  deploy-worker.yml  deploy.yml
frontend/: Cargo.toml  Trunk.toml  _headers  index.html  robots.txt  sitemap.xml  sw.js
frontend/public/: manifest.json
frontend/src/: app.rs  config.rs  i18n.rs  main.rs
frontend/src/components/: animal_card.rs  chat_area.rs  chat_bubble.rs  config_panel.rs  context_menu.rs  custom_select.rs  mod.rs  sidebar.rs  update_banner.rs
frontend/styles/: inline.css
shared/: Cargo.toml
shared/src/: lib.rs
worker/: Cargo.toml  wrangler.toml
worker/src/: lib.rs
