[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.6.0", features = ["http"] }
gloo-storage = "0.3.0"
leptos = { version = "0.8.16", features = ["csr"] }
markdown = "1.0.0-alpha.26"
serde = { version = "1.0.228", features = ["derive"] }
shared = { version = "0.1.0", path = "../shared" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CustomEvent", "Event", "Window"] }
