[package]
name = "shared"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["cgutieco"]
repository = "https://github.com/cgutieco/inteligencia-animal"

[dependencies]
chrono = { version = "0.4.43", features = ["serde", "wasmbind"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4", "serde", "js"] }
