[package]
name = "api-worker"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["cgutieco"]
repository = "https://github.com/cgutieco/inteligencia-animal"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { version = "0.1.0", path = "../shared" }
wasm-bindgen = "0.2.108"
worker = { version = "0.7.4", features = ["http"] }
